[package]
name = "todo-mic-act"
version = "0.1.0"
authors = ["Guilherme Cintra (gcintra2) <gcintra2@na.xom.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "2.0.0"
serde = "1.0.111"
dotenv = "0.15.0"
config = "0.10.1"
tokio-pg-mapper = "0.1.8"
tokio-pg-mapper-derive = "0.1.5"
deadpool-postgres = "0.5.5"
tokio-postgres = "0.5.4"